--- a/Part1_DataPreprocessing/Python/data_prepocessing1.ipynb
+++ b/Part1_DataPreprocessing/Python/data_prepocessing1.ipynb
@@ -24,6 +24,24 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importing the data set\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = pd.read_csv('Data.csv')\n",
+    "x = dataset.iloc[:, :-1].values\n",
+    "y"
+   ]
   }
  ],
  "metadata": {
